--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         s=u.createElement('script');
         s.type='text/javascript';
         s.async=true;
-        s.src='https://cdn.pushcrew.com/js/853ac01e1b244d1eab9cd7c0269748c0.js';
+        s.src='https://cdn.pushcrew.com/js/14c28d0abdf9e9e7df28b599d40e306a.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
     })(window,document);
@@ -14,5 +14,5 @@
 </head>
 
 <body>
-prod
+prod_ttl_acc
 </body>
